@@ -1808,6 +1808,8 @@ public class StorageService implements IEndpointStateChangeSubscriber, StorageSe
         for (Range range : ranges)
         {
             AntiEntropyService.RepairFuture future = forceTableRepair(range, tableName, columnFamilies);
+            if (future == null)
+                continue;
             futures.add(future);
             // wait for a session to be done with its differencing before starting the next one
             try
@@ -1848,6 +1850,8 @@ public class StorageService implements IEndpointStateChangeSubscriber, StorageSe
             return;
 
         AntiEntropyService.RepairFuture future = forceTableRepair(getLocalPrimaryRange(), tableName, columnFamilies);
+        if (future == null)
+            return;
         try
         {
             future.get();
@@ -1865,6 +1869,12 @@ public class StorageService implements IEndpointStateChangeSubscriber, StorageSe
         for (ColumnFamilyStore cfStore : getValidColumnFamilies(tableName, columnFamilies))
         {
             names.add(cfStore.getColumnFamilyName());
+        }
+
+        if (names.isEmpty())
+        {
+            logger_.info("No column family to repair for keyspace " + tableName);
+            return null;
         }
 
         return AntiEntropyService.instance.submitRepairSession(range, tableName, names.toArray(new String[names.size()]));
